--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "ng test",
     "lint": "./node_modules/.bin/nx lint && ng lint",
     "e2e": "ng e2e",
+    "start:pwa": "node --max-old-space-size=8192 ./node_modules/@angular/cli/bin/ng build -c production && http-server -o -p 1337 -c-1 dist/apps/nx-app",
     "affected:apps": "./node_modules/.bin/nx affected:apps",
     "affected:libs": "./node_modules/.bin/nx affected:libs",
     "affected:build": "./node_modules/.bin/nx affected:build",
@@ -35,39 +36,42 @@
     "@angular/forms": "^7.0.0",
     "@angular/platform-browser": "^7.0.0",
     "@angular/platform-browser-dynamic": "^7.0.0",
+    "@angular/pwa": "^0.12.2",
     "@angular/router": "^7.0.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
-    "zone.js": "^0.8.26",
-    "@nrwl/nx": "7.4.1",
+    "@angular/service-worker": "^7.0.0",
     "@ngrx/effects": "6.1.2",
     "@ngrx/router-store": "6.1.2",
-    "@ngrx/store": "6.1.2"
+    "@ngrx/store": "6.1.2",
+    "@nrwl/nx": "7.4.1",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.3.3",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.11.0",
     "@angular/cli": "~7.1.0",
     "@angular/compiler-cli": "^7.0.0",
     "@angular/language-service": "^7.0.0",
-    "@angular-devkit/build-angular": "~0.11.0",
     "@ngrx/store-devtools": "6.1.2",
-    "ngrx-store-freeze": "0.2.4",
     "@nrwl/schematics": "7.4.1",
-    "jasmine-marbles": "0.4.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
+    "jasmine-marbles": "0.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ngrx-store-freeze": "0.2.4",
+    "prettier": "1.15.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.3",
-    "prettier": "1.15.2"
+    "http-server": "^0.11.1",
+    "typescript": "~3.1.3"
   }
 }
